closes #9 fixed overflow on links

--- a/src/App.css
+++ b/src/App.css
@@ -48,10 +48,14 @@ table.chatLog tr td {
     vertical-align: top;
 }
 
-table.chatLog tr td:nth-child(2) {
+table.chatLog tr>td:nth-child(2) {
     width: 15em;
     text-align: right;
     padding-right: 15px;
+}
+
+table.chatLog tr>td:nth-child(3) {
+    word-break: break-word;
 }
 
 div#errors {
